loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:3: error: not found: value estSurbiscuit
while(!estSurbiscuit()){
       ^LoopFor:5: error: not found: value nb
  nbPas = nb Pas +1
          ^