loopfor.LoopFor.scala.code
var nbPas= 0

while(!estSurbiscuit()){
  avance()
  nbPas = nb Pas +1
}
// on va jusqu'au Biscuit


prendBiscuit()

for (i <- 1 to nbPas){
  recule()
}
// on revient au depart

poseBiscuit()